Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46954

XCB: Clicking on title bar on Ubuntu 14.04 prints unhandled client message warning

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.4.2
    • QPA: X11/XCB
    • Ubuntu 14.04

    Description

      To reproduce, run any application on Ubuntu 14.04 and right click in title bar. This is printed to console:

      "QXcbWindow: Unhandled client message: "_COMPIZ_TOOLKIT_ACTION""

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes