Silence the _COMPIZ_TOOLKIT_ACTION warning.

It is still unclear how to act on those
messages. We are already doing this for
other Compiz messages -_COMPIZ_DECOR_*.

Change-Id: I45f76b5f56ee1b07eb4c7398cc85b5d7bed86c4c
Task-number: QTBUG-46954
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>

cregit: 24d0f9ef5aa81390fc315fccae616191a88c26d9 https://github.com/qt/qtbase/commit/24d0f9ef5aa81390fc315fccae616191a88c26d9