src/plugins/platforms/xcb/qxcbwindow.cpp
@@ -11063,6 +11063,17 @@ name|QXcbAtom
 operator|::
 name|_COMPIZ_DECOR_DELETE_PIXMAP
 argument_list|)
+operator|||
+name|event
+operator|->
+name|type
+operator|==
+name|atom
+argument_list|(
+name|QXcbAtom
+operator|::
+name|_COMPIZ_TOOLKIT_ACTION
+argument_list|)
 condition|)
 block|{
 comment|//silence the _COMPIZ messages for now
